--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6366f1" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Mjolnir - Nostr Signer</title>
   </head>
   <body>
