--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6366f1" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="stylesheet" href="../src/styles/global.css" />
-    <title>Igloo PWA</title>
+    <title>Igloo Mobile PWA</title>
   </head>
   <body>
     <div id="root"></div>
     <script src="/app.js"></script>
   </body>
-</html> 
+</html>
