--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6366f1" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Igloo Mobile PWA</title>
+    <title>Igloo PWA</title>
   </head>
   <body>
     <div id="root"></div>
