--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6366f1" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <title>Igloo PWA</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="/app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
